fixed modal overflows

--- a/ASI.Basecode.WebApp/wwwroot/css/Category.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/Category.css
@@ -1,4 +1,5 @@
 ﻿
+
 .modal {
     z-index: 1050;
     display: none;
@@ -7,15 +8,17 @@
     padding: 20px;
 }
 
-.modal.flex {
-    display: flex;
-}
+
+    .modal.flex {
+        display: flex;
+    }
 
 .modal-content {
     max-width: 700px;
+    max-height: 700px;
     width: 100%;
-    height: 90%;
-    padding: 20px 40px;
+    height: 100%;
+    overflow-y: auto;
     background-color: white;
     border-radius: 8px;
 }
