--- a/ASI.Basecode.WebApp/wwwroot/css/wallet.css
+++ b/ASI.Basecode.WebApp/wwwroot/css/wallet.css
@@ -16,6 +16,9 @@
 }
 
 
+}
+
+
 .modal {
     z-index: 1050;
     display: none;
@@ -25,17 +28,16 @@
 }
 
 
-.modal.flex {
- display: flex
-
-}
+    .modal.flex {
+        display: flex;
+    }
 
 .modal-content {
     max-width: 700px;
+    max-height: 700px;
     width: 100%;
-    height: 80%;
+    height: 100%;
     overflow-y: auto;
-    padding: 20px 40px;
     background-color: white;
     border-radius: 8px;
 }
